# c64m

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  c64m.ini  pal-border.md
agents/: README.md  architecture.md  cia.md  control-port.md  disk-iec1541.md  frontend-debugger.md  machine.md  remote-improve.md  runtime-control.md  sid-audio.md  testing.md  threading-efficiency-roadmap.md  threading-efficiency.md  tools.md  vice-oracle.md  vicii.md
agents/demo/deusexmachina/: dem-handoff.md
agents/demo/dk2016/: dkarcade2016.prg
agents/demo/eod/: eod-handoff.md
agents/demo/fort-apocalypse/: Fort Apocalypse.prg
agents/demo/lft/: lft-handoff.md
assets/roms/: README.md
manual/: HELP_MARKDOWN.md  manual.md
md-files/: AGENTS.md  ASMAPI.md  ASMDESIGN.md  ASMSTATUS.md  C64AUDFID.md  C64AUDFID_1.md  C64AUDFID_2.md  C64AUDFID_3.md  C64AUDFID_4.md  C64AUDFID_5.md  C64CIAPHASE_A.md  C64CIAPHASE_B.md  C64CIAPHASE_C.md  C64CIAPHASE_D.md  C64CIAPHASE_E.md  C64CIAPHASE_F.md  C64CIAPHASE_G.md  C64CIAPHASE_H.md  C64CIAPHASE_I.md  C64CIAPHASE_J.md  C64CIAPHASE_K.md  C64CLOCKSCHED.md  C64CPUVALIDATION.md  C64FRAMEPIPE.md  C64HLPHASE_1.md  C64HLPHASE_2.md  C64HLPHASE_3.md  C64HLPHASE_4.md  C64IEC1541.md  C64IEC1541PHASE_1.md  C64IEC1541PHASE_2.md  C64IEC1541PHASE_3.md  C64IEC1541PHASE_3_Conversation.md  C64IEC1541PHASE_4.md  C64IEC1541PHASE_5.md  C64IECEVAL.md  C64IECPHASE3_FIX6ATTEMPT.md  C64MAUDIO.md  C64MCIA.md  C64MCIA_NEW.md  (+93 more)
md-files/corpus/cia-timing/: AGENT_PHASE4.md  HANDOFF.md  HARDWARE.md  PRIORITY.md  README.md  SUMMARY.md
md-files/corpus/cia-timing/results/: .gitignore  c64m-priority-20260712T045051Z.tsv.meta.txt  c64m-priority-latest.tsv  c64m-priority-latest.tsv.meta.txt  x64sc-cia-core-latest.tsv  x64sc-cia-core-latest.tsv.meta.txt  x64sc-lorenz-cia-latest.tsv  (+5 more)
md-files/docs/status/: AUDIO.md  CIA.md  CONTROL.md  CPU_MACHINE.md  DEFERRED.md  DISK_IO.md  FRONTEND_DEBUGGER.md  IEC1541.md  OPTIMIZATIONS.md  ORIGINAL_STATUS.md  README.md  SID.md  TESTING.md  VICII.md  VICII_EXPOSE_REVEAL.md
md-files/timing-baselines/: PAL_NTSC_CURRENT.md  PHASE5_ACCEPTANCE.md  README.md
roms/: 1541.rom  system.rom
src/: app_options.c  app_options.h  main.c
src/control/: CMakeLists.txt  control_protocol.c  control_protocol.h  control_server.c  control_server.h
src/frontend/: CMakeLists.txt  c64_layout.c  c64_layout.h  c64_pro_mono_font_data.h  crt_renderer.c  crt_renderer.h  disk_led_data.c  disk_led_data.h  frontend.c  frontend.h  frontend_input.c  frontend_input.h  frontend_joystick_input.c  frontend_joystick_input.h  help_view.c  help_view.h  nuklear.h  nuklear_config.h  nuklear_impl.c  nuklear_sdl.h  window_title.c  window_title.h
src/machine/: CMakeLists.txt  c1541.c  c1541.h  c1541_gcr.c  c1541_gcr.h  c1541_media.c  c1541_media.h  c64.c  c64.h  c64_bus.c  c64_bus.h  c64_frame.h  c64_rom.c  c64_rom.h  c64_snapshot.c  c64_snapshot.h  c6510.c  c6510.h  c6510_inln.h  cia.c  cia.h  cpu.c  cpu.h  keyboard.c  keyboard.h  sid.c  sid.h  via6522.c  via6522.h  vicii.c  vicii.h
src/platform/: CMakeLists.txt  platform.c  platform.h  platform_audio.c  platform_audio.h  platform_fs.c  platform_fs.h  platform_socket.c  platform_socket.h
src/runtime/: CMakeLists.txt  runtime.c  runtime.h  runtime_assembler.c  runtime_assembler.h  runtime_breakpoint_ini.c  runtime_breakpoint_ini.h  runtime_client.c  runtime_client.h  runtime_command.c  runtime_command.h  runtime_event.c  runtime_event.h  runtime_internal.h  runtime_thread.c
src/tools/: CMakeLists.txt
src/tools/assembler/: CMakeLists.txt  DESIGN.md  STATUS.md  asm.c  asm.h  asm_common.h  asm_lib.h  define.c  define.h  dynarray.c  dynarray.h  emit.c  emit.h  err.c  err.h  errorlog.c  errorlog.h  expr.c  expr.h  file.c  file.h  gperf.c  gperf.gperf  gperf.h  opcode.c  opcode.h  parse.c  parse.h  scope.c  scope.h  segment.c  segment.h  symbol.c  symbol.h  token.c  token.h
src/tools/c64masm/: CMakeLists.txt  main.c
src/tools/crt/: CMakeLists.txt  crt.c  crt.h
src/tools/d64/: CMakeLists.txt  d64.c  d64.h
src/tools/disasm_6502/: CMakeLists.txt  disasm_6502.c  disasm_6502.h
src/tools/g64/: CMakeLists.txt  g64.c  g64.h
src/tools/symbols/: CMakeLists.txt  symbol_file.c  symbol_table.c  symbol_table.h
src/tools/t64/: CMakeLists.txt  t64.c  t64.h
src/util/: CMakeLists.txt  audio_buffer.c  audio_buffer.h  basic_v2.c  basic_v2.h  cond.c  cond.h  config.c  config.h  message_queue.c  message_queue.h  mutex.c  mutex.h  paste_parser.c  paste_parser.h  thread.c  thread.h
symbols/: basic.txt  kernal.txt
tests/: test_app_options.c  test_file.h
tests/control/: test_control_protocol.c
tests/fixtures/: legacy_v8.c64state
tests/frontend/: test_crt_renderer.c  test_frontend_input.c  test_frontend_joystick.c  test_window_title.c
tests/machine/: probe_c64_arkanoid_g64.c  test_c1541.c  test_c1541_gcr.c  test_c1541_media.c  test_c64_boot_progression.c  test_c64_bus.c  test_c64_cia.c  test_c64_cpu_validation.c  test_c64_disk_load.c  test_c64_frame.c  test_c64_keyboard.c  test_c64_real_1541_load.c  test_c64_robocop_g64.c  test_c64_rom.c  test_c64_snapshot.c  test_c64_snapshot_1541_midload.c  test_c64_vicii.c  test_sid.c  test_via6522.c
tests/platform/: test_platform_fs.c
tests/runtime/: test_runtime_assembler.c  test_runtime_crt.c  test_runtime_disk.c  test_runtime_fileio.c  test_runtime_frame.c  test_runtime_real_1541_autorun.c  test_runtime_romboot.c  test_runtime_savestate.c  test_runtime_scheduler.c  test_runtime_stepping.c
tests/tools/: test_assembler_conditionals.c  test_assembler_expressions.c  test_assembler_loops.c  test_assembler_macros.c  test_assembler_scopes_segments.c  test_assembler_targets.c  test_crt.c  test_d64.c  test_disasm_6502.c  test_g64.c  test_symbol_table.c  test_t64.c
tests/util/: test_audio_buffer.c  test_basic_v2.c  test_paste_parser.c
tools/: c64_control_client.py  capture_sid_audio.py  compare_sid_audio.py  dis6502.py  eod_regression_capture.c  gen_help.py  profile_c64_hotloop.c  profile_runtime_hotloop.c
tools/cia-timing-corpus/: fetch.sh  run_c64m.c  run_c64m.sh  run_x64sc.sh
